@@ -555,8 +555,11 @@
 "Total artists: %1":"",
 "Total duration: %1":"",
 "Total genres: %1":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
 "Total releases: %1":"",
 "Total tracks: %1":"",
+"Total works: %1":"",
 "Track":"",
 "Track Information":"",
 "Track Number":"",
