@@ -677,6 +677,9 @@
 "Stop random mix?":"",
 "Tint background":"",
 "Tint background with chosen color.":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":"",
 "Use a row of icons, and not a list of text, for settings entries.":"",
 "Use full screen for background":"",
 "Use icons for settings":"",
