@@ -683,5 +683,8 @@
 "1 Year":"1 år",
 "%1 Years":"%1 år",
 "1 day":"1 dag",
-"%1 days":"%1 dage"
+"%1 days":"%1 dage",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":""
 }
