@@ -683,5 +683,8 @@
 "1 Year":"1 année",
 "%1 Years":"%1 années",
 "1 day":"1 jour",
-"%1 days":"%1 jours"
+"%1 days":"%1 jours",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":""
 }
