@@ -682,6 +682,9 @@
 "Single line only":"",
 "Tint background":"",
 "Tint background with chosen color.":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":"",
 "Use a row of icons, and not a list of text, for settings entries.":"",
 "Use icons for settings":""
 }
