@@ -602,7 +602,10 @@
 "Title":"",
 "To support this feature, this app needs to fool your browser into thinking it is playing audio. This is accomplished by playing a silent audio file in a loop. Most browsers block auto-playing of audio so this cannot start until you have interacted with the app (e.g. clicked somewhere). Alternatively you can configure your browser to allow auto-play of audio for the URL you use to access this app (%1).":"",
 "Toggle queue":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
 "Total releases: %1":"",
+"Total works: %1":"",
 "Track":"",
 "Track Number":"",
 "Track is not downloadable.":"",
