@@ -683,5 +683,8 @@
 "For all players ":"",
 "From current cover (all players)":"",
 "Main artist":"",
-"Per player":""
+"Per player":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":""
 }
