@@ -683,5 +683,8 @@
 "Browse on":"",
 "Browse on %1":"",
 "Disc":"",
-"Main artist":""
+"Main artist":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
+"Total works: %1":""
 }
