@@ -655,7 +655,10 @@
 "Three lines for track view":"",
 "Tint background":"",
 "Tint background with chosen color.":"",
+"Total labels: %1":"",
+"Total playlists: %1":"",
 "Total releases: %1":"",
+"Total works: %1":"",
 "Track Number":"",
 "Unpin":"",
 "Unsync":"",
