@@ -16,6 +16,8 @@
 10. Move browse sort selection into dialog, to match queue sorting.
 11. Add action to remove artist from queue.
 12. When embed iframe only copy CSS variables if this is a LMS page.
+13. Show total playlists, works, and labels, if supported in LMS's
+    serverstatus.
 
 5.9.1
 -----
